# FITBIT-AGENT

./: .env.example  .gitattributes  .gitignore  FLUTTER_SETUP.md  Procfile  RAILWAY_DEPLOY.md  README.md  README_GITHUB.md  install_on_android.bat  nixpacks.toml  pyproject.toml  railway.json  run_flutter_app.bat  setup_flutter.ps1  test_output.txt  test_results.txt
.github/: copilot-instructions.md
docs/: architecture.md
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: api_client.dart  app_state.dart  config.dart  main.dart  models.dart  theme.dart
flutter_app/lib/screens/: alerts_screen.dart  chat_screen.dart  dashboard_screen.dart  live_stream_screen.dart  settings_screen.dart
scripts/: check_csv_data.py  check_csv_data_safe.py  download_lifesnaps.py  extract_participant.py  fetch_lfs.py  inspect_participant_metrics.py  scan_500k_types.py  scan_bson.py  test_ws.py
scripts/rais_anonymized/csv_rais_anonymized/: daily_fitbit_sema_df_unprocessed.csv  hourly_fitbit_sema_df_unprocessed.csv
scripts/rais_anonymized/mongo_rais_anonymized/: participant_621e2e8e67b776a24055b564.bson
src/.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  (+236 more)
src/wearable_agent/: __init__.py  config.py  logger.py  main.py  models.py
src/wearable_agent/affect/: __init__.py  ema.py  features.py  inference.py  models.py  pipeline.py
tests/: conftest.py  test_affect.py  test_api.py  test_collectors.py  test_monitors.py  test_pipeline.py
(+520 files in other folders)
