[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wearable-agent"
version = "0.1.0"
description = "Agent-based framework for collecting and analyzing wearable device data in behavioral, health, and social research."
license = { text = "Proprietary – Radboud University" }
requires-python = ">=3.11"
authors = [
    { name = "Radboud University Research Team" },
]
keywords = ["wearable", "IoT", "agent", "health", "research", "LangChain", "Fitbit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langgraph>=0.2,<0.4",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "aiosqlite>=0.20,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.0",
    "apscheduler>=3.10,<4.0",
    "websockets>=14.0,<15.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "pre-commit>=4.0,<5.0",
]
analysis = [
    "scipy>=1.14,<2.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "jupyter>=1.0,<2.0",
]

[project.scripts]
wearable-agent = "wearable_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wearable_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
